# zig_fun

choice_1/: choice.zig
cmake_testing/: CMakeLists.txt  script.sh  zig_hello.zig
cmake_testing/CMake/: CMakeDetermineZIGCompiler.cmake  CMakeZIGInformation.cmake
cmake_testing/lib/: zig_lib.zig
cmake_testing_c/: CMakeLists.txt  main.c
greetings_2/: build.zig
greetings_2/src/: main.zig
greetings_3/: build.zig
greetings_3/src/: main.zig
hello_world_1/: build.zig  hello.zig  hello1
largest_element_1/: largest_element.zig
raytracing/: build.zig  image.ppm  test.zig
raytracing/src/: camera.zig  color.zig  hittable.zig  hittable_list.zig  main.zig  material.zig  ray.zig  rtweekend.zig  sphere.zig  vec3.zig
reverse_in_place/: reverse.zig
semantics/: semantics  semantics.zig
semantics_7/: semantics  semantics.zig
sum_from_1_to_n/: sum.zig
sum_from_1_to_n_5/: sum.zig
turing_machines/: TM1.txt  TM2.txt  TM3.txt  ass3A_ex1.txt  ass3A_ex3.txt
